create operation bar interface